--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,7 @@
         %title donuts.io
         %link(href="css/bootstrap.css" rel="stylesheet")
     %body
-        %div(class="container")
-            %div(class="header")
-                %h3(class="text-muted") donuts.io
+        %nav(class="navbar navbar-default navbar-fixed-top" role="nagivation")
+            %div(class="container")
+                %div(class="header")
+                    %h3(class="text-muted") donuts.io
