--- a/views/index.haml
+++ b/views/index.haml
@@ -2,8 +2,19 @@
 %html
     %head
         %title donuts.io
-        %link(href="css/bootstrap.css" rel="stylesheet")
-        %link(href="css/navbar-fixed-top.css" rel="stylesheet")
+        %link(href="ss/bootstrap.min.css" rel="stylesheet")
+        %link(href="ss/navbar-fixed-top.css" rel="stylesheet")
+        %link(href="ss/main.scss" rel="stylesheet")
+
+        %script(src="https://code.jquery.com/jquery-1.10.2.min.js")
+        %script(src="js/bootstrap.js")
+        %script(src="js/jquery.stellar.min.js")
+
+        %script
+            $(function(){
+            $.stellar();
+            });
+
     %body(data-spy="scroll" data-target=".navbar")
         %div(class="navbar navbar-inverse navbar-fixed-top" role="navigation")
             %div(class="container")
@@ -21,9 +32,8 @@
                             %a(href="#test4") test4
 
         %div(class="container")
-            %div(class="jumbotron" id="test1")
+            %div(class="jumbotron" id="test1" data-stellar-background-ratio="0.5" style="background-image:url(img/cat.jpg);")
                 %h1
-                    test
                     %br
                     %br
                     %br
@@ -31,9 +41,8 @@
                     %br
                     %br
                     %br
-            %div(class="jumbotron"id="test2")
+            %div(class="jumbotron" id="test2" data-stellar-background-ratio="2" style="background-image:url(img/cat.jpg);")
                 %h1
-                    test
                     %br
                     %br
                     %br
@@ -41,9 +50,8 @@
                     %br
                     %br
                     %br
-            %div(class="jumbotron"id="test3")
+            %div(class="jumbotron" id="test3" data-stellar-background-ratio="1" style="background-image:url(img/cat.jpg);")
                 %h1
-                    test
                     %br
                     %br
                     %br
@@ -51,9 +59,8 @@
                     %br
                     %br
                     %br
-            %div(class="jumbotron"id="test4")
+            %div(class="jumbotron" id="test4" data-stellar-background-ratio="2" style="background-image:url(img/cat.jpg);")
                 %h1
-                    test
                     %br
                     %br
                     %br
@@ -62,5 +69,3 @@
                     %br
                     %br
 
-        %script(src="https://code.jquery.com/jquery-1.10.2.min.js")
-        %script(src="js/bootstrap.js")         
