--- a/views/index.haml
+++ b/views/index.haml
@@ -13,14 +13,15 @@
             $(function(){
             $.stellar();
             });
+
     %body(data-spy="scroll" data-target=".navbar")
-        %div(class="navbar navbar-inverse navbar-fixed-top" role="navigation")
-            %div(class="container")
-                %div(class="navbar-header")
-                    %a(class="navbar-brand")eldonuts
-                %div(class="navbar-collapse collapse")
-                    %ul(class="nav navbar-nav")
-                        %li(class="active")
+        .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
+            .container
+                .navbar-header
+                    %a.navbar-brand eldonuts
+                .navbar-collapse.collapse
+                    %ul.nav.navbar-nav
+                        %li.active
                             %a(href="#cat1") cat1
                         %li
                             %a(href="#cat2") cat2
@@ -29,7 +30,7 @@
 
 
 
-        %div(class="row")
-            %div(class= "cat1 sixhundred" id="cat1" data-stellar-background-ratio="0.5")
-            %div(class= "cat2 sixhundred" id="cat2" data-stellar-background-ratio="0.5")
-            %div(class= "cat3 sixhundred" id="cat3" data-stellar-background-ratio="1")
+        .row
+            .cat1.sixhundred#cat1(data-stellar-background-ratio="0.5")
+            .cat2.sixhundred#cat2(data-stellar-background-ratio="0.5")
+            .cat3.sixhundred#cat3(data-stellar-background-ratio="1")
