adding sass compiling/cleanup

--- a/views/index.haml
+++ b/views/index.haml
@@ -2,9 +2,8 @@
 %html
     %head
         %title donuts.io
-        %link(href="ss/bootstrap.min.css" rel="stylesheet")
-        %link(href="ss/navbar-fixed-top.css" rel="stylesheet")
-        %link(href="ss/main.css" rel="stylesheet")
+        %link(href="ss/style.css" rel="stylesheet")
+
         %script(src="https://code.jquery.com/jquery-1.10.2.min.js")
         %script(src="js/bootstrap.min.js")
         %script(src="js/jquery.stellar.min.js")
