--- a/views/index.haml
+++ b/views/index.haml
@@ -17,7 +17,7 @@
         .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
             .container
                 .navbar-header
-                    %a.navbar-brand eldonuts
+                    %span.glyphicon.glyphicon-home.white
                 .navbar-collapse.collapse
                     %ul.nav.navbar-nav
                         %li.active
