--- a/views/index.haml
+++ b/views/index.haml
@@ -3,6 +3,7 @@
     %head
         %title donuts.io
         %link(href="ss/style.css" rel="stylesheet")
+        %link(href="ss/bootstrap.min.css" rel="stylesheet")
 
         %script(src="https://code.jquery.com/jquery-1.10.2.min.js")
         %script(src="js/bootstrap.min.js")
