add dog circle image and jumbotron

--- a/public/ss/sass/donuts/_navbar.scss
+++ b/public/ss/sass/donuts/_navbar.scss
@@ -6,3 +6,10 @@ body {
     color:white;
     font-size: 16pt;
 }
+.top50 {
+    padding-top: 50px;
+}
+.img200 {
+    width: 200px;
+    height: 200px;
+}
