--- a/public/ss/sass/donuts/_navbar.scss
+++ b/public/ss/sass/donuts/_navbar.scss
@@ -2,9 +2,9 @@ body {
   padding-top: 50px;
 }
 
-.homeg {
+.g200 {
     color:white;
-    font-size: 16pt;
+    font-size: 200px;
 }
 .top50 {
     padding-top: 50px;
