--- a/views/index.haml
+++ b/views/index.haml
@@ -29,13 +29,13 @@
                             %a(href="#cat3") cat3
         .row
             .cat1.sixhundred#cat1(data-stellar-background-ratio="0.5")
-                .container
-                    .row.top50
-                        .col-md-3
+                .container.top50.w700
+                    .row
+                        .col-md-4
                             %img.img-circle.img200(src="img/dog.jpg")
-                        .col-md-9
-                            .jumbotron
-                                %h1 eldonuts!
-                                Just a place for me to try out some things.
+                        .col-md-4
+                            %span.glyphicon.glyphicon-asterisk.g200
+                        .col-md-4
+                            %span.glyphicon.glyphicon-heart.g200
             .cat2.sixhundred#cat2(data-stellar-background-ratio="0.5")
             .cat3.sixhundred#cat3(data-stellar-background-ratio="1")
